--- a/New folder/index.html
+++ b/New folder/index.html
@@ -18,7 +18,7 @@
             <nav class="space-x-4">
                 <a href="#" class="hover-link">Home</a>
                 <a href="#" class="hover-link">Contests</a>
-                <a href="#" class="hover-link">Problems</a>
+                <a href="problems.html" class="hover-link">Problems</a>
                 <a href="#" class="hover-link">Ranking</a>
                 <a href="#" class="hover-link">Discuss</a>
                 <a href="#" class="hover-link">About</a>
@@ -132,7 +132,7 @@
     <!-- Footer -->
     <footer class="bg-gray-900 text-white p-4 mt-8 fade-in">
         <div class="container mx-auto text-center">
-            <p>&copy; 2023 CodeSprint. All rights reserved.</p>
+            <p>&copy; 2024 CodeSprint. All rights reserved.</p>
         </div>
     </footer>
 
